# quick-lookup

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  offline_dictionary.json  pyproject.toml  quick_lookup_config.json  quick_translate.py  requirements.txt  themes.json  启动快速翻译.bat
.github/workflows/: release.yml
scripts/: build_release.ps1
