[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-lookup"
version = "0.3.1"
description = "A lightweight Windows selection dictionary with floating translations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pynput>=1.7.7,<2"]

[project.optional-dependencies]
build = ["pyinstaller>=6.0,<7"]

[project.scripts]
quick-lookup = "quick_translate:main"

[tool.setuptools]
py-modules = ["quick_translate"]
